--- a/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
+++ b/SparkValueDesktopApplication/Views/PasswordChangeView.xaml
@@ -19,9 +19,10 @@
 
             <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1">
                 <StackPanel VerticalAlignment="Center" Margin="10">
+                    <!--#region Form Inputs -->
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
                         <TextBlock Text="Reset Verification:"/>
-                        <TextBox x:Name="VerificationEntry" Text="{Binding PasswordVerification}" MinWidth="150" MaxWidth="150" VerticalContentAlignment="Center"/>
+                        <TextBox x:Name="VerificationEntry" Text="{Binding PasswordVerification, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" MinWidth="150" MaxWidth="150" VerticalContentAlignment="Center"/>
                     </StackPanel>
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
                         <TextBlock Text="New Password:"/>
@@ -37,8 +38,11 @@
                             </AP:PasswordBoxAttachedProperty.EncryptedPassword>
                         </PasswordBox>
                     </StackPanel>
+                    <!--#endregion-->
+                    
                     <TextBlock MaxWidth="300" Foreground="LightYellow" Text="{Binding ErrorText}" HorizontalAlignment="Center" TextWrapping="Wrap" FontWeight="Bold"/>
-
+                    
+                    <!--#region Button Bar -->
                     <Grid VerticalAlignment="Bottom" HorizontalAlignment="Right">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="auto"/>
@@ -46,8 +50,9 @@
                             <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
                         <Button Grid.Column="0" Content="Cancel" Command="{Binding CancelCommand}"/>
-                        <Button Grid.Column="2" Content="Reset Password" Command="{Binding ResetPasswordCommand}" CommandParameter="{Binding ElementName=PasswordEntry}"/>
+                        <Button Grid.Column="2" Content="Reset Password" Command="{Binding ResetPasswordCommand}"/>
                     </Grid>
+                    <!--#endregion-->
                 </StackPanel>
             </Border>
         </Grid>
