--- a/SparkValueDesktopApplication/MainWindow.xaml
+++ b/SparkValueDesktopApplication/MainWindow.xaml
@@ -7,6 +7,7 @@
         xmlns:vms="clr-namespace:SparkValueBackend.ViewModels;assembly=SparkValueBackend"
         xmlns:views="clr-namespace:SparkValueDesktopApplication.Views"
         mc:Ignorable="d"
+        Closing="Window_Closing"
         ResizeMode="CanResize"
         WindowStartupLocation="CenterScreen"
         FontSize="15"
@@ -47,7 +48,7 @@
             </DataTemplate>
         </Viewbox.Resources>
         <Border BorderBrush="Black" BorderThickness="0.25">
-            <ContentControl Content="{Binding CurrentViewModel}"/>
+            <ContentControl x:Name="ViewModelContainer" Content="{Binding CurrentViewModel}"/>
         </Border>
     </Viewbox>
 </Window>
