Lesson templates are ready for basic testing and implementation. Added default template if no interactive element is present.

--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <!-- Top content -->
+        <TextBlock Grid.Row="0" Text="{Binding PlainText}" TextWrapping="Wrap" />
         <!-- Bottom interactive element -->
     </Grid>
 </UserControl>
