--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateDefaultView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateDefaultView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SparkValueDesktopApplication.Views.LessonContent.LessonContentTemplateOneView"
+﻿<UserControl x:Class="SparkValueDesktopApplication.Views.LessonContent.LessonContentTemplateDefaultView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,12 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
-        </Grid.ColumnDefinitions>
-        <!-- Left side content -->
-        <TextBlock Grid.Column="0" Text="{Binding PlainText}" TextWrapping="Wrap" />
-        <!-- Right side interactive element -->
+        <!-- Plain Content, No Frills -->
+        <TextBlock Text="{Binding PlainText}" TextWrapping="Wrap"/>
     </Grid>
 </UserControl>
