--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
@@ -13,5 +13,6 @@
         </Grid.RowDefinitions>
         <!-- Top interactive element -->
         <!-- Bottom content -->
+        <TextBlock Grid.Row="1" Text="{Binding PlainText}" TextWrapping="Wrap" />
     </Grid>
 </UserControl>
