--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateOneView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateOneView.xaml
@@ -12,7 +12,8 @@
             <ColumnDefinition Width="auto"/>
         </Grid.ColumnDefinitions>
         <!-- Left side content -->
-        <TextBlock Grid.Column="0" Text="{Binding PlainText}" TextWrapping="Wrap" />
+        <TextBlock Grid.Column="0" Text="{Binding PlainText}" TextWrapping="Wrap"/>
         <!-- Right side interactive element -->
+        <TextBlock Grid.Column="1" Text="{Binding InteractiveElement}" TextWrapping="Wrap"/>
     </Grid>
 </UserControl>
