Fixed issue with users lesson progress not getting saved. Basic outlines of iterators. Display problems.

--- a/SparkValueDesktopApplication/Views/LessonView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonView.xaml
@@ -48,9 +48,9 @@
             <StackPanel DockPanel.Dock="Right" Margin="20">
                 <TextBlock Text="{Binding Title}"/>
                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                    <Button Content="&lt;-" Command="{Binding PreviousPageCommand}"/>
-                    <Button Content="->" Command="{Binding NextPageCommand}"/>
-                    <TextBlock VerticalAlignment="Center" Text="{Binding Progress}"/>
+                    <Button Content="&lt;-" Command="{Binding PreviousPageCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Content="->" Command="{Binding NextPageCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBlock VerticalAlignment="Center" Text="{Binding Progress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </StackPanel>
                 <!--#region Lesson Content -->
                 <Grid>
@@ -71,7 +71,7 @@
                             <lv:LessonContentTemplateFourView/>
                         </DataTemplate>
                     </Grid.Resources>
-                    <ContentControl Content="{Binding DisplayedContent}"/>
+                    <ContentControl Content="{Binding DisplayedContent, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
                 <!--#endregion-->
             </StackPanel>
