--- a/SparkValueDesktopApplication/App.xaml
+++ b/SparkValueDesktopApplication/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="SparkValueDesktopApplication.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SparkValueDesktopApplication">
+             xmlns:local="clr-namespace:SparkValueDesktopApplication"
+    xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="10"/>
