--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateTwoView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateTwoView.xaml
@@ -4,6 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SparkValueDesktopApplication.Views.LessonContent"
+             xmlns:vms="clr-namespace:SparkValueBackend.ViewModels.LessonInteractiveElements;assembly=SparkValueBackend"
+             xmlns:views="clr-namespace:SparkValueDesktopApplication.Views.LessonInteractiveElements"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -12,7 +14,14 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <!-- Left side interactive element -->
-        <TextBlock Grid.Column="0" Text="{Binding InteractiveElement}" TextWrapping="Wrap"/>
+        <Grid Grid.Column="0">
+            <Grid.Resources>
+                <DataTemplate DataType="{x:Type vms:DiodeCheckpointViewModel}">
+                    <views:DiodeCheckpointView/>
+                </DataTemplate>
+            </Grid.Resources>
+            <ContentControl Content="{Binding Element}"/>
+        </Grid>
         <!-- Right side content -->
         <TextBlock Grid.Column="1" Text="{Binding PlainText}" TextWrapping="Wrap"/>
     </Grid>
