Logic Gates part four, all done.

--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateTwoView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateTwoView.xaml
@@ -28,6 +28,9 @@
                 <DataTemplate DataType="{x:Type vms:NOTsXORsViewModel}">
                     <views:NOTsXORsView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:NANDsNORsViewModel}">
+                    <views:NANDsNORsView/>
+                </DataTemplate>
             </Viewbox.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Viewbox>
