Integrated circuits interactive element finished. Small tweaks to the lesson content as well.

--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
@@ -24,6 +24,9 @@
                 <DataTemplate DataType="{x:Type vms:CapacitorTypesViewModel}">
                     <views:CapacitorTypesView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:BlackBoxMiniCircuitsViewModel}">
+                    <views:BlackBoxMiniCircuitsView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
