Transistor interactive element finished.

--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
@@ -27,6 +27,9 @@
                 <DataTemplate DataType="{x:Type vms:BlackBoxMiniCircuitsViewModel}">
                     <views:BlackBoxMiniCircuitsView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:TransistorWalkthroughViewModel}">
+                    <views:TransistorWalkthroughView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
