Inductor interactive element finished.

--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
@@ -19,6 +19,9 @@
                 <DataTemplate DataType="{x:Type vms:LogicGateSymbolsViewModel}">
                     <views:LogicGateSymbolsView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:InductorDiagramViewModel}">
+                    <views:InductorDiagramView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
