--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
@@ -22,6 +22,9 @@
                 <DataTemplate DataType="{x:Type vms:InductorDiagramViewModel}">
                     <views:InductorDiagramView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:CircuitDiagramTermsViewModel}">
+                    <views:CircuitDiagramTermsView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
