--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateOneView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateOneView.xaml
@@ -27,6 +27,9 @@
                 <DataTemplate DataType="{x:Type vms:ButtonsViewModel}">
                     <views:ButtonsView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:OhmsLawAdvancedViewModel}">
+                    <views:OhmsLawAdvancedView/>
+                </DataTemplate>
             </Viewbox.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Viewbox>
