--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateThreeView.xaml
@@ -33,6 +33,9 @@
                 <DataTemplate DataType="{x:Type vms:ComponentPackagesViewModel}">
                     <views:ComponentPackagesView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:OhmsLawBasicViewModel}">
+                    <views:OhmsLawBasicView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
