--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateFourView.xaml
@@ -28,6 +28,9 @@
                 <DataTemplate DataType="{x:Type vms:OscilloscopeOverviewViewModel}">
                     <views:OscilloscopeOverviewView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:CircuitPowerForBeginnersViewModel}">
+                    <views:CircuitPowerForBeginnersView/>
+                </DataTemplate>
             </Grid.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Grid>
