--- a/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateOneView.xaml
+++ b/SparkValueDesktopApplication/Views/LessonContent/LessonContentTemplateOneView.xaml
@@ -36,6 +36,9 @@
                 <DataTemplate DataType="{x:Type vms:MultimeterMeasuringViewModel}">
                     <views:MultimeterMeasuringView/>
                 </DataTemplate>
+                <DataTemplate DataType="{x:Type vms:CircuitPowerOptionsViewModel}">
+                    <views:CircuitPowerOptionsView/>
+                </DataTemplate>
             </Viewbox.Resources>
             <ContentControl Content="{Binding Element}"/>
         </Viewbox>
